--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,103 @@
-body{
-    min-height:100vh;
+* {
+    font-family:cursive;
 }
 
+body{
+    margin: 0;
+    min-height: calc(100vh - 20px);
+}
+
+#entete {
+    display: flex;
+    padding-left: 15px;
+    background-color: rgb(126, 126, 134);
+    border: 2px solid rgb(112, 112, 118);
+    color: white;
+}
+
+#entete > div {
+    width: calc(100vw - 260px);
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
+#entete a {
+    color: white;
+    text-decoration: none;
+}
+
+#entete h1 {
+    min-width: 280px;
+}
+
+#entete h1 a:hover {
+    color: #e6e6e6;
+}
+
+#entete > div > a {
+    padding: 10px;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    min-width: 80px;
+}
+
+#entete > div > a:hover {
+    color: black;
+    background-color: rgb(222, 222, 226);
+}
+
+#contenu {
+    padding: 15px;
+    display: block;
+}
+
+.addpost {
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+}
+
+#user li {
+    height: 30px;
+}
+
+#user {
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+#user ul {
+    border: 1px solid #9b9b9b;
+    background-color: #e6e6e6;
+    border-radius: 5px;
+    padding: 20px;
+    max-height: 700px;
+    min-width: 450px;
+    overflow-y: scroll;
+}
+
+.col {
+    display:flex;
+    flex-direction: column;
+}
+
+.option {
+    text-decoration: none;
+    color: white;
+    margin-left: 10px;
+}
+
+.option > img {
+    vertical-align: middle;
+}
 
 .billet{
-    background-color:rgba(100,100,200,0.7);
+    /*background-color:rgba(100,100,200,0.7);*/
+    background-color: rgba(47, 124, 83, 0.7);
     color:white;
     font-weight:bold;
     border:1px black solid;
@@ -18,4 +111,89 @@ body{
 }
 .billet a:hover{
     color:#11b;
+}
+
+.htitle {
+    width: 100%;
+    text-align: center;
+    font-size: 42px;
+    border-bottom: 1px solid #bababa;
+}
+
+#infos {
+    width: 100%;
+    border-bottom: 1px solid #bababa;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+#infos > h3 {
+    margin: 0;
+    font-size: 35px;
+}
+
+.btnGroup {
+    display: flex;
+    justify-content: flex-end;
+    max-height: 38px;
+}
+
+.normal,
+.dangerous {
+    padding: 8px;
+    border-radius: 5px;
+    text-decoration: none;
+    color: white;
+    margin: 0 10px;
+}
+
+.normal {
+    background-color: #13a1fa;
+    box-shadow: 5px 5px 5px #4bbaff;
+}
+
+.normal:hover {
+    background-color: #23aaff;
+}
+
+.dangerous {
+    background-color: #ff6161;
+    box-shadow: 5px 5px 5px #ffacac;
+}
+
+.dangerous:hover {
+    background-color: #ff7c7c;
+}
+
+.signForm {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.signForm > form {
+    width: 400px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background-color: #dedede;
+    border: 1px solid #b7b7b7;
+    border-radius: 5px;
+}
+
+.signForm > form > div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 300px;
+    padding: 10px;
+}
+
+.signForm label {
+    margin-bottom: 5px;
+    color: #3b3b3b;
+    font-weight: bold;
 }
