Fonctionnalite trie de l affichage des posts + ajout de "mes posts" dans le file d actualite + dautres trucs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,12 +149,12 @@ body{
 }
 
 .normal {
-    background-color: #13a1fa;
-    box-shadow: 5px 5px 5px #4bbaff;
+    background-color: #63AD86;
+    box-shadow: 5px 5px 5px #63AD86;
 }
 
 .normal:hover {
-    background-color: #23aaff;
+    background-color: #65bc8e;
 }
 
 .dangerous {
